# digiorno-stitchworks

./: .gitignore  Cargo.toml  FORMAT_NOTES.md  README.md
.github/workflows/: release.yml
scripts/: release.sh
src/: cli.rs  disk.rs  gotek.rs  gui.rs  inkstitch.rs  lib.rs  model.rs  preview.rs  shv.rs
